gateways/monitoring/http-route-monitoring.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  name: nginx-k8s-example-com
  namespace: monitoring
spec:
  hostnames:
    - k8s.example.com
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: grafana
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: [ ]
